assets/css/custom.css
@font-face {
    font-family: 'mistlock_regular';
    src: url('mistlock_regular-webfont.woff2') format('woff2'),
        url('mistlock_regular-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}

.flex-space-evenly {
    display: flex;
    justify-content: space-evenly;
}

#battleplan-icon1 {
    color: white;
}

.scoring-accordion {
    width: 100%;
}

.scoring-row {

    display: flex;
}

.scoring-column {
    flex: 50%;
}

.column-score-left {
    width: 50%;
    padding: 5px;
    float: left;
    margin-right: 20px;
}

.scoring-tiles {
    padding: 20px;

}

.Arial-font {
    font-family: Arial;
    font-weight: normal;
}

.column-score-right {
    width: 50%;
    padding: 5px;
    float: right;
    margin-left: 20px;
}

.player-heading1 {
    color: #000080;
    font-family: 'mistlock_regular';
    font-size: 30px;
}

.player-heading2 {
    color: darkred;
    font-family: 'mistlock_regular';
    font-size: 30px;
}

.victory-points-heading1 {
    color: #000080;
    font-family: 'mistlock_regular';
    font-size: 35px;
}

.victory-points-heading2 {
    color: darkred;
    font-family: 'mistlock_regular';
    font-size: 35px;
}

.scoring-center {
    text-align: center;
}

.scoring-label {
    color: black;
}

.scoring-priority {
    margin: 10px;
}

label {
    display: block;
    padding-left: 15px;
    text-indent: -15px;
    color: black;
    font-family: 'lightcase';
    font-weight: 800;
    font-size: 11pt;
}

/*
.checkbox {
    width: 15px;
    height: 15px;
    padding: 0;
    margin: 0;
    position: absolute;
}
*/


input.checkbox-medium {
    height: 40px;
    width: 40px;
    position: relative;
}


input.checkbox-large {
    height: 50px;
    width: 50px;
    position: relative;
}

.other-battle-tactic {
    width: 300px;
    color: black;
    position: relative;
    border-style: solid;
    border-color: black;
}

.setup-text-fields {
    width: 300px;
    color: black;
    position: relative;
    border-style: solid;
    border-color: black;
}

.dropbtn {
    color: black;
    font-size: 16px;
    border: none;
    cursor: pointer;
    font-family: Arial;
    font-weight: normal;
    font-size: 14pt;
    width: 200px;
}

.dropdown {
    position: relative;
    display: inline-block;
}

.dropdown-content {
    display: none;
    position: absolute;
    background-color: white;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
    z-index: 1;
    font-family: Arial;
    font-weight: normal;
}

.dropdown-content a {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
    font-family: Arial;
    font-weight: normal;
}

.dropdown-content a:hover {
    background-color: white;
    font-family: Arial;
    font-weight: 800;
}

.dropdown:hover .dropdown-content {
    display: block;
}

.dropdown:hover .dropbtn {
    background-color: rgb(128, 128, 211);
}

.logo-display {
    height: 60px;
    width: 80px;
    margin-bottom: 30px;
}

.text-field-align-other {
    margin-left: 55px;
}

.text-field-align-setup {
    margin-left: 30px;
}

.vp-separate {
    margin-top: 50px;
}

.name-separate {
    margin-bottom: 30px;
}

.battle-sim-left {
    margin-top: 165px;
    width: 280px;
    height: 1200px;
    float: left;

}

.battle-sim-middle {
    margin-top: 165px;
    width: 1225px;
    height: 1200px;
    float: left;
    margin-left: 5px;

}

.battle-sim-bottom {
    width: 1349px;
    height: 500px;
    margin-top: 750px;
    padding-left: 280px;
}

.battle-sim-padding {
    padding-top: 165px;
    background-color: yellow;
}

.unit-title {
    font-family: 'mistlock_regular';
    margin-top: 15px;
    margin-right: 5px;
    margin-left: 25px;
    width: 350px;
    font-size: 20px;
}

.deployment-title {
    font-family: 'mistlock_regular';
    margin-top: 15px;
    margin-right: 10px;
    margin-left: 15px;
    font-size: 20px;

}

.battle-sim-btn {
    margin: 10px auto;
    width: 120px;
    border-top: 4px ridge #ffd700;
    border-left: 4px groove #ffd700;
    border-right: 4px ridge #ffd700;
    border-bottom: 4px groove #ffd700;
    box-shadow: inset 0px 0px 5px 3px rgba(1, 1, 1, 0.3);
    border-radius: 8px;
    font-family: 'Merriweather', serif;
    color: black;
    font-size: 12px;
    font-weight: 500;
    text-shadow: 0 1px 1px #000;
    text-align: center;
    padding: 10px 0;
    background: radial-gradient(circle, #ff6347, #fe2712);

}

.battle-sim-btn:hover {
    background: radial-gradient(circle, white, #333399);
    box-shadow: 0px 0 5px 5px rgba(255, 255, 255, 0.2);

}

.battle-sim-btn:active {
    background: radial-gradient(circle, white, #333399);
    box-shadow: 0px 0 5px 5px rgba(255, 255, 255, 0.2);

}


.battle-sim-buttons {
    padding-top: 1px;
    margin-left: 1px;

}

.canvas-border {
    margin-top: 5px;
    border-top: 4px ridge #ffd700;
    border-left: 4px groove #ffd700;
    border-right: 4px ridge #ffd700;
    border-bottom: 4px groove #ffd700;
}

.battle-sim-images {
    width: 50px;
    height: 50px;
    margin-left: 20px;
}

.input-color {
    width: 45px;
    height: 45px;
    margin-left: 10px;
    margin-right: 10px;
    margin-top: 1px;

}

.wrap-flex-top {
    display: flex;
    width: 100%;
    align-items: center;

}

.wrap-flex-bottom {
    margin-top: 5px;
    display: flex;
    width: 100%;
    align-items: center;

}

.unit-text {
    width: 300px;
    margin-right: 20px;

}

.battle-sim-small-control-btn {
    margin: 10px auto;
    width: 40px;
    border-top: 4px ridge #ffd700;
    border-left: 4px groove #ffd700;
    border-right: 4px ridge #ffd700;
    border-bottom: 4px groove #ffd700;
    box-shadow: inset 0px 0px 5px 3px rgba(1, 1, 1, 0.3);
    border-radius: 8px;
    font-family: 'Merriweather', serif;
    color: black;
    font-size: 12px;
    font-weight: 500;
    text-shadow: 0 1px 1px #000;
    text-align: center;
    padding: 10px 0;
    background: radial-gradient(circle, #ff6347, #fe2712);
}

.battle-sim-small-control-btn:hover {
    background: radial-gradient(circle, white, #333399);
    box-shadow: 0px 0 5px 5px rgba(255, 255, 255, 0.2);

}

.battle-sim-small-control-btn:active {
    background: radial-gradient(circle, white, #333399);
    box-shadow: 0px 0 5px 5px rgba(255, 255, 255, 0.2);

}

.battle-sim-control-center {
    margin-left: 80px;
    margin-right: 100px;
}

.battle-sim-control-ruler {
    margin-left: 40px;
}

.ribbon-img {
    height: 50px;
    width: 260px;
    margin-left: 10px;
    margin-right: 10px;
    margin-top: 5px;
}

.ribbon-container {
    position: relative;
}

.ribbon-text {
    position: absolute;
    right: 20px;
    bottom: 20px;
    top: 12px;
    left: 15px;
    color: black;
    padding-left: 20px;
    padding-right: 20px;
    font-family: 'Mysteria';
}

.battle-sim-unit-text {
    font-family: 'mistlock_regular';
    font-size: 16pt;

}

.battle-sim-btn-nf {
    margin: 10px auto;
    width: 120px;
    border-top: 4px ridge #ffd700;
    border-left: 4px groove #ffd700;
    border-right: 4px ridge #ffd700;
    border-bottom: 4px groove #ffd700;
    box-shadow: inset 0px 0px 5px 3px rgba(1, 1, 1, 0.3);
    border-radius: 8px;
    font-family: 'Merriweather', serif;
    color: black;
    font-size: 12px;
    font-weight: 500;
    text-shadow: 0 1px 1px #000;
    text-align: center;
    padding: 10px 0;
    background: radial-gradient(circle, #ff6347, #fe2712);

}

.home-page-tile-titles {
    font-family: 'mistlock_regular';
    margin-top: 1px;
    margin-bottom: 1px;
    font-size: 65px;
}

.scoring-icons-display {
    margin-bottom: 10px;
}

.battle-tactic-dropdown {
    font-size: 16px;
    width: 150px;

}

.setup-dropdown {
    font-size: 16px;
    width: 150px;
}

.enemy-monster-slain {
    font-size: 12px;
}

.text-box-border {
    border: black;
    border-width: thick;
}



.score-sheet-dropdown2 {
    font-size: 16px;
    font-family: Arial;
    font-weight: bold;
    color: darkred;
}

.battle-plan-dropdown {
    width: 200px;
}

.place-button {
    margin-left: 20px;
    width: 400px;
}

.first-priority {
    font-family: 'mistlock_regular';
}

@media screen and (max-width: 1024px) {
    .first-priority {}
}

@media screen and (min-width: 1025px) {
    .first-priority {
        font-size: 22px;
    }
}

.score-sheet-dropdown-label {
    font-family: 'mistlock_regular';
}

@media screen and (max-width: 1024px) {
    .score-sheet-dropdown-label {
        font-size: 20px;
        font-weight: bold;

    }
}

@media screen and (min-width: 1025px) {
    .score-sheet-dropdown-label {
        font-size: 25px;
        font-weight: bold;

        margin-left: 10px;
        margin-right: 5%;
    }
}

.score-sheet-dropdown {
    font-family: 'mistlock_regular';
}

@media screen and (max-width: 1024px) {
    .score-sheet-dropdown {}
}

@media screen and (min-width: 1025px) {
    .score-sheet-dropdown {
        width: 50%;
        margin-right: 20px;
    }
}

.battle-tactic-position {
    text-align: center;
}

.scoring-sheet-space {
    margin-top: 20px;
}

.vp-input-box {
    border: blue;
    background-color: yellow;

}

input[type='number'] {
    width: 50px;
    color: red;

}

.objective-vps1 {
    font-family: 'mistlock_regular';
    font-size: 25px;
    text-align: center;
    color: black;
}

